<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_live"
            android:title="@string/live_scores"/>
        <item
            android:id="@+id/nav_fixtures"
            android:title="@string/fixtures" />
        <item
            android:id="@+id/nav_results"
            android:title="@string/results" />
        <item
            android:id="@+id/nav_pic_of_the_day"
            android:title="@string/pic_of_the_day" />
    </group>

    <item android:title="@string/team">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:title="@string/about_flavium" />
            <item
                android:id="@+id/nav_developers"
                android:title="@string/meet_the_developers" />
        </menu>
    </item>

</menu>
